# ledgerly

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DETAILED_ROADMAP.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-site.yml  deploy.yml  tests.yml
apps/site/: .dockerignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
corroborly/: __init__.py  cli.py
corroborly/api/: app.py  auth.py  deps.py
corroborly/core/: constants.py  runlog.py  yamlio.py
corroborly/engine/: __init__.py  abstracts.py  ai.py  ai_edit_sessions.py  artefact_creation.py  artefacts.py  citations.py  claims.py  conversion.py  cross_reference.py  data.py  database.py  derived_text.py  digest.py  doc_validation.py  document_targets.py  export.py  external_search.py  grounding.py  guidelines.py  health.py  metadata.py  metadata_quality.py  migrations.py  notes.py  pdf_merge.py  progress_log.py  project_log.py  references.py  relationships.py  report_schemas.py  reports.py  research_questions.py  research_stages.py  scholar_providers.py  sidecars.py  sources.py  templates.py  text_analysis.py  transcription.py  (+5 more)
corroborly/web/: app.py
docs/: ARCHITECTURE.md  DEPLOY.md  FLAGS.md  PACKAGING.md  ZOTERO_SYNC_DESIGN_NOTE.md
docs/api/: CONTRACT.md
ledgerly/: __init__.py  cli.py
ledgerly/api/: app.py  auth.py  deps.py
ledgerly/core/: __init__.py  constants.py
ledgerly/engine/: abstracts.py  ai.py  ai_edit_sessions.py  artefact_creation.py  artefacts.py  backup.py  citations.py  claims.py  conversion.py  cross_reference.py  data.py  database.py  derived_text.py  doc_validation.py  document_targets.py  export.py  external_search.py  filenames.py  grounding.py  guidelines.py  health.py  metadata.py  metadata_quality.py  migrations.py  notes.py  pdf_merge.py  progress_log.py  project_log.py  references.py  report_schemas.py  reports.py  research_questions.py  research_stages.py  sidecars.py  sources.py  vault.py  watch.py  workspace.py  zotero.py
ledgerly/web/: app.py
researchboss/: __init__.py  cli.py
scripts/: colorize_todo_md.py  generate_todo_html.py
tests/: test_abstracts.py  test_ai.py  test_ai_edit_sessions.py  test_ai_grounding_adversarial.py  test_api.py  test_artefacts.py  test_backup.py  test_citations.py  test_claims.py  test_cli.py  test_conversion.py  test_cross_reference.py  test_data.py  test_database.py  test_db_backends.py  test_derived_text.py  test_digest.py  test_doc_validation.py  test_document_targets.py  test_export.py  test_external_search.py  test_grounding.py  test_guidelines.py  test_health.py  test_metadata.py  test_metadata_quality.py  test_migrations.py  test_notes.py  test_pdf_merge.py  test_progress_log.py  test_project_log.py  test_references.py  test_relationships.py  test_reports.py  test_research_questions.py  test_research_stages.py  test_scholar_providers.py  test_sidecars.py  test_sources.py  test_templates.py  (+8 more)
(+126 files in other folders)
