[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "researchboss"
version = "0.9.7"
description = "Local-first, evidence-first research workspace engine and CLI."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Pedro Veloso", email = "pedro@veloso.dev" },
]
license = { file = "LICENSE" }
dependencies = [
  "click>=8.1.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.6.0",
  "PyYAML>=6.0.1",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
researchboss = "researchboss.cli:app"

[tool.setuptools.packages.find]
include = ["researchboss*"]
